--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,10 @@
 {
-    "name": "boilerplate angularjs",
-    "devDependencies": {
-        "angular": "1.3.*",
-        "normalize.css": "3.0.2"
-    },
-    "dependencies": {}
+  "name": "boilerplate angularjs",
+  "devDependencies": {
+    "angular": "1.3.*",
+    "normalize.css": "3.0.2"
+  },
+  "dependencies": {
+    "jquery": "~2.1.4"
+  }
 }
